<resources>
    <string name="app_name">嗒嗒学车</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_download">下载</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_dada__user__info">Dada_User_Info</string>
    <string name="title_activity_a">a</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_dada__user__news_pages">Dada_User_NewsPages</string>
    <string name="title_activity_dada__user_pingjia">Dada_User_pingjia</string>
    <string name="title_activity_dada__user__login">Dada_User_Login</string>
    <string name="title_activity_dada__user__login_code">Dada_User_LoginCode</string>

    <string name="title_activity_exam">ExamActivity</string>
    <string name="title_activity_resister">ResisterActivity</string>
    <string name="str_transition_name">explode</string>
    <string name="button_Login_Resister_text">+</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_user_info_set">UserInfoSet</string>
    <string name="title_activity_user_change_password">UserChangePassword</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_km2_progress">KM2ProgressActivity</string>
    <string name="title_activity_km2_deduct">KM2DeductActivity</string>
    <string name="title_activity_km2_trail">KM2TrailActivity</string>
    <string name="action_question_clear_title">清空数据库</string>
    <string name="action_image_clear_title">清空所有图片视频</string>
    <string name="string_userinfo">个人信息</string>
    <string name="title_activity_ignore">IgnoreActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="refresh_down_text">下拉刷新</string>
    <string name="title_activity_collect">LCollectActivity</string>
    <string name="title_activity_my_grades">LGradesActivity</string>
    <string name="title_activity_my_grades_title">我的成绩</string>
    <string name="title_activity_my_grades_time">考试时间</string>
    <string name="title_activity_my_grades_usetime">用时</string>
    <string name="title_activity_my_grades_grade">分数</string>
    <string name="title_activity_my_grades_evaluate">评价</string>
    <string name="title_activity_my_grades_delete">删除</string>
    <string name="title_activity_my_grades_edit">编辑</string>
    <string name="title_activity_my_grades_edit_cancle">取消</string>
    <string name="title_activity_my_grades_editdetails">全选</string>
    <string name="title_activity_my_grades_details">记录详情</string>
    <string name="title_activity_my_grades_hasdone">已做</string>
    <string name="title_activity_my_grades_welldone">答对</string>
    <string name="title_activity_my_grades_answerwrong">答错</string>
    <string name="title_activity_my_grades_notdone">未做</string>

    <string name="title_activity_my_grades_seemorebtn">查看更多</string>
    <string name="title_activity_exclude">LExcludeActivity</string>
    <string name="title_activity_my_error">LErrorActivity</string>
    <string name="all_my_collect_topic">所有我收藏的题</string>
    <string name="clear_my_collect">清空我的收藏</string>
    <string name="all_my_exclude_topic">排除的题</string>
    <string name="all_recover">全部恢复</string>
    <string name="all_my_error_question">所有我做错的题</string>
    <string name="clear_my_error_question">清空我的错题</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_error">我的错题</string>
    <string name="my_practice">练习统计</string>
    <string name="my_exclude">排除的题</string>
    <string name="clear_my_error_question_right_after">答对后自动移出"我的错题"</string>
    <string name="stfl1">违法行为综合判断与案例分析</string>
    <string name="stfl2">安全行车常识</string>
    <string name="stfl3">常见交通标志、标线和交警手势辨识</string>
    <string name="stfl4">驾驶职业道德和文明驾驶常识</string>
    <string name="stfl5">恶劣气候和复杂道路条件下驾驶常识</string>
    <string name="stfl6">紧急情况下避险常识</string>
    <string name="stfl7">交通事故救护及常见危化品处置常识</string>
    <string name="stfl8">道路交通安全法律、法规和规章</string>
    <string name="stfl9">道路交通信号</string>
    <string name="stfl10">安全行车、文明驾驶基础知识</string>
    <string name="stfl11">机动车驾驶操作相关基础知识</string>
    <string name="stfl12">客车、货车专用</string>
    <string name="title_activity_download_km2_video">DownloadKM2VideoActivity</string>
    <string name="title_activity_lpractice_statistical">LPracticeStatisticalActivity</string>
    <string name="title_activity_ledit_grade">LEditGrade</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dada__user__my_jx">Dada_User_MyJx</string>
    <string name="title_activity_dada__user__platform">Dada_User_Platform</string>
    <string name="title_activity_dada__user_refund">Dada_User_refund</string>
    <string name="title_activity_exam_result">ExamResultActivity</string>
    <string name="title_activity_sxlxexam">SXLXExamActivity</string>
    <string name="title_activity_sjlxexam">SJLXExamActivity</string>
    <string name="title_activity_btmsexam">BTMSExamActivity</string>
    <string name="title_activity_mnksexam">MNKSExamActivity</string>
    <string name="title_activity_nb_public">NbPublicActivity</string>
    <string name="title_activity_dada__user__jm">Dada_User_Jm</string>
    <string name="title_activity_dada_user_shequ">dada_user_shequ</string>
    <string name="title_activity_dada_user_falv">dada_user_falv</string>
    <string name="title_activity_dada_user_info">dada_user_info</string>
    <string name="title_activity_h5">H5Activity</string>
    <string name="title_activity_dada__user_falv_tk">Dada_User_falvTk</string>
    <string name="title_activity_lk1_exclude">LK1ExcldeActivity</string>
    <string name="title_activity_lk1_collect">LK1CollectActivity</string>
    <string name="title_activity_lk1_error">LK1ErrorActivity</string>
    <string name="title_activity_lk3_light">LK3LightActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_load_js">LoadJsActivity</string>
    <string name="title_activity_down_km_video">DownKmVideoActivity</string>

    <drawable name="bg_pressed">@color/Grey</drawable>
    <drawable name="bg_no_pressed">@color/White</drawable>
    <string name="title_activity_dada__user__voucher">Dada_User_Voucher</string>
	<string name="title_activity_full_play">FullPlayActivity</string>
</resources>
